# tcc

./: .travis.yml  LICENSE  Pipfile  README.md  makefile  pyproject.toml
.github/workflows/: pythonapp.yml
data/: data.py
src/: data_dir_scan.py  health.ipynb  health.py  main.py  manager.py  searcher.py
src/helper/: list_helper.py  number_helper.py  print_helper.py  result_helper.py
src/indicator/: lucro_liquido.py  patrimonio_liquido.py  roe.py  roe_calculator.py
src/plataform/: data_dir_scan.py  filters.py  pdf_extract.py  preprocessor.py  searcher.py
src/technique/: stemming.py
tests/: test_ambev20191T.py  test_data_dir_scan.py  test_engie20192T.py  test_engie20202T.py  test_fleury20193T.py  test_fleury20202T.py  test_gerdau20153T.py  test_gerdau20171T.py  test_manager.py  test_roe_calculator.py  test_searcher.py  test_src.py  test_tcc.py  test_weg20102T.py  test_weg20151T.py  test_weg20172T.py  test_weg20192T.py
tests/helper/: test_list_helper.py  test_number_helper.py  test_result_helper.py
tests/plataform/: test_data_dir_scan.py  test_filters.py  test_searcher.py
tests/reports/: test_weg20172T.py
tests/reports/pypdf2/: test_ambev20191T.py  test_engie20192T.py  test_engie20202T.py  test_fleury20193T.py  test_fleury20202T.py  test_gerdau20153T.py  test_gerdau20171T.py  test_gerdau20184T.py  test_gerdau20192T.py  test_weg20102T.py  test_weg20151T.py  test_weg20172T.py  test_weg20192T.py
tests/reports/pytesseract/: test_ambev20191T.py  test_engie20202T.py  test_fleury20193T.py  test_fleury20202T.py  test_gerdau20153T.py  test_gerdau20171T.py  (+6 more)
(+39 files in other folders)
