[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = ["lucas <lucasjoao.lj@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyPDF2 = "^1.26"
nltk = "^3.5"
numpy = "^1.19"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
flake8 = "^3.7"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
